# type-flat

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
.github/: ISSUE_GUIDELINES.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: coverage.yml  deploy.yml  publish.yml
scripts/: build.js  build.ts  cli.js  cli.ts  publish.js  publish.ts
src/: flatten-tmp.rs  flatten.rs  lib.rs  logger.rs  main.rs
src/flatten/: class.rs  declare.rs  function.rs  generic.rs  interface.rs  keyword.rs  mod.rs  result.rs  type_alias.rs  utils.rs  variable.rs
src/graph/: declare.rs  keyword.rs  mod.rs  utils.rs
src/job/: mod.rs
test-web/: test.js
tests/: common.rs  flatten_lib.rs  flatten_lit.rs  flatten_tests.rs  test_class.rs  test_echarts.rs  test_generic.rs  test_interface.rs  test_keyword.rs  test_merged.rs  test_multiple.rs  test_type.rs
types/: index.d.ts
web/: cli.ts  index.ts
