[package]
name = "type_flat"
version = "0.1.0"
edition = "2024"
authors = ["hboot <bobolity@163.com>"]
description = "Typesript type flatten tool"
license = " Apache-2.0"
repository = "https://github.com/ngd-b/type-flat"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "type_flat"
crate-type = ["cdylib", 'rlib']

[[bin]]
name = "type_flat"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# oxc parser & utils
oxc_allocator = "0.94.0"
oxc_ast = "0.94.0"
oxc_parser = "0.94.0"
oxc_span = "0.94.0"

# wasm
wasm-bindgen = "0.2.104"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
assert_cmd = "2.0.17"
wasm-bindgen-test = "0.3.54"
