[package]
name = "type_flat"
version = "0.1.0"
edition = "2024"
authors = ["hboot <bobolity@163.com>"]
description = "Typesript type flatten tool"
license = " Apache-2.0"
repository = "https://github.com/ngd-b/type-flat"

[lib]
name = "type_flat"
crate-type = ["cdylib", 'rlib']

[[bin]]
name = "type_flat"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "wrap_help"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# oxc parser & utils
oxc_allocator = "0.95.0"
oxc_ast = { version = "0.95.0", features = ["serialize"] }
oxc_parser = "0.95.0"
oxc_span = { version = "0.95.0", features = ["serialize"] }
oxc_semantic = { version = "0.95.0", features = ["cfg", "serialize"] }
oxc_codegen = "0.95.0"

# logger
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

# test
assert_cmd = "2.1.1"

# node native addon
napi = "3.5.2"
napi-derive = "3.3.3"
once_cell = "1.21.3"

colored = "3.0.0"
indoc = "2.0.7"
indicatif = "0.18.3"
tempfile = "3.23.0"

[build-dependencies]
napi-build = "2.3.1"
